refactor: update Admin Dashboard documentation and enhance routes configuration
- Revised the Admin Dashboard documentation for clarity and detail, including new sections on user and form management.
- Updated routes configuration to reflect changes in navigation, including new sections for Forms, Responses, SMTP, and Notifications.

--- a/contents/docs/getting-started/admin-dashboard/index.mdx
+++ b/contents/docs/getting-started/admin-dashboard/index.mdx
@@ -1,109 +1,122 @@
 ---
 title: Admin Dashboard
-description: Learn how to manage tenants, forms, and system metrics using the 4Form Admin Dashboard.
+description: Detailed guide for managing tenants, forms, submissions, and activity in the 4Form Admin Dashboard.
 ---
 
-The Admin Dashboard is the central interface for managing tenant users, creating and assigning forms, and monitoring overall form activity. This section provides a detailed walkthrough of all key features available to administrators.
+# Admin Login Documentation
 
----
+## Dashboard
 
-## Overview
+1. **What is the 4Form Admin Dashboard?**
 
-When logged in as an administrator, the dashboard displays actionable widgets and insights to help you:
+   It’s the main screen you see after logging in as an admin. From here, you can manage users (called tenants), create forms, check submissions, and see form activity.
 
-- Create and manage tenant users
-- Build and assign forms
-- Track form submissions and login activity
-- View system metrics and trends
+2. **What are the first things I can do here?**
 
----
+   - ✅ Create a new user (tenant)
+   - 📝 Create a form
+   - 📊 Track form submissions and logins
 
-## Creating a Tenant User
+3. **How do I add a new user (tenant)?**
 
-To add a new tenant user:
+   Click on the "Create Tenant User" button in the top right corner. Fill in the user details and save.
 
-1. Click the **Create Tenant User** button located in the top-right corner of the dashboard.
-2. Fill in the required user details, such as name and email address.
-3. Click **Save** to create the user.
+4. **How do I create a form?**
 
-The user will be added to the system and is eligible to receive assigned forms.
+   Click on the "Create Form" button next to the tenant button. Give your form a name, add fields, and assign it to a tenant.
 
----
+5. **What does “My Tenants” mean?**
 
-## Creating a Form
+   It shows how many users (tenants) you have and how many are active.
 
-To create a new form:
+6. **What does “My Forms” show?**
 
-1. Click the **Create Form** button next to the tenant management area.
-2. Enter a form name and add fields (text, email, dropdowns, etc.).
-3. Assign the form to one or more tenant users.
-4. Save the form to make it available for submission.
+   It tells you how many forms have been created in total.
 
----
+7. **What does “Total Submissions” show?**
 
-## Dashboard Metrics
+   This shows how many people have filled out forms.
 
-The dashboard provides real-time statistics on key platform activities:
+8. **What is “Tenant Logins”?**
 
-### My Tenants
+   This shows how many times your users (tenants) have logged in recently.
 
-Displays the total number of tenant users and how many are currently active.
+9. **What is the Form Activity graph?**
 
-### My Forms
+   This graph shows:
+   - 📈 How many forms were submitted
+   - 🛠️ How many forms were created
+   - 🔐 How many logins happened
 
-Shows the total number of forms created in the system.
+   You can view this activity by selecting: 1 Month, 6 Months, or 1 Year
 
-### Total Submissions
+10. **How can I view all tenants?**
 
-Indicates the total number of submissions received across all forms.
+    Go to the “My Tenants” box and click “Manage All Tenants” to see or edit all your users.
 
-### Tenant Logins
+11. **Where can I find my forms?**
 
-Tracks the number of logins performed by tenant users over time.
+    Scroll down to “My Forms” and click “View All Forms” to see the list.
 
----
+12. **How can I check recent form submissions?**
 
-## Activity Graph
-
-The **Form Activity** graph visualizes:
-
-- Number of form submissions
-- Number of forms created
-- Number of tenant logins
-
-You can filter the graph using the following time ranges:
-
-- Last 1 Month
-- Last 6 Months
-- Last 1 Year
+    In the “Recent Submissions” section, click “View All Responses” to see who filled out which form.
 
 ---
 
-## Navigating Tenants and Forms
+# Tenant Users
 
-### Managing Tenants
+1. **What is the purpose of this page?**
 
-To view or manage all tenant users:
+   This page helps you create, search, and manage tenant users. Tenants are the users who will fill forms or manage their own forms.
 
-- Navigate to the **My Tenants** section.
-- Click **Manage All Tenants** to access the full list of users.
+2. **What is a “Tenant User”?**
 
-### Viewing Forms
+   A tenant user is someone (like a client, employee, or team member) who has access to view, fill, or manage forms shared with them.
 
-To view all existing forms:
+3. **How can I create a new tenant user?**
 
-- Scroll to the **My Forms** section.
-- Click **View All Forms**.
+   Click the “+ Create Tenant User” button in the top right (or center if no users exist). You’ll be asked to enter details like name, email, etc., and assign form access.
 
-### Viewing Submissions
+4. **Where do I see the list of tenants?**
 
-To check recent form submissions:
+   Once you add tenant users, they will appear in the Tenant Users list section below the search bar.
 
-- Locate the **Recent Submissions** section.
-- Click **View All Responses** to access submission data.
+5. **How do I search for a tenant user?**
+
+   Use the search bar at the top to find a tenant by typing their:
+   - Username
+   - Email
+   - Name
+   Then click Search.
+
+6. **What is the “Status” filter for?**
+
+   The Status dropdown lets you filter tenants by:
+   - ✅ Active – Tenants who are currently using the system
+   - 🚫 Inactive – Tenants who are deactivated
+   - 🔄 All Status – Shows both active and inactive users
+
+7. **What does “No tenant users found” mean?**
+
+   It means you haven’t created any tenant users yet. Just click “Create Tenant User” to add your first one.
 
 ---
 
-## Summary
+## Create Tenant User
 
-The Admin Dashboard serves as the operational hub for administrators. It consolidates user management, form creation, and activity tracking into a single interface. Use the dashboard widgets and graphs to monitor your system and take quick action when needed.
+1. **What does the “Active User” checkbox mean?**
+
+   If this box is checked ✅, the user will be able to log in and access the forms you assign to them. If unchecked ❌, the user will be created but won’t be able to log in until activated.
+
+2. **How do I assign forms to a tenant?**
+
+   After creating the tenant, go back to the Tenant Management page and assign forms to them. 📧 The tenant will get an email invitation to set their password and view assigned forms.
+
+3. **What happens after I click "Create Tenant User"?**
+
+   The tenant is created in the system, and they’ll receive an email to log in. You can then assign forms to them.
+
+4. **Can I cancel this form?**
+
+   Yes. Click the “Cancel” button next to “Create Tenant User” if you want to stop creating the user.
