--- a/contents/docs/getting-started/admin-dashboard/index.mdx
+++ b/contents/docs/getting-started/admin-dashboard/index.mdx
@@ -1,122 +1,169 @@
 ---
 title: Admin Dashboard
-description: Detailed guide for managing tenants, forms, submissions, and activity in the 4Form Admin Dashboard.
+description: Complete guide to the 4Form Admin Dashboard - your central hub for managing users, forms, and analytics.
 ---
 
-# Admin Login Documentation
+# Admin Dashboard
 
-## Dashboard
+The Admin Dashboard is your command center for managing the entire 4Form platform. From here, you can oversee users, monitor form performance, track submissions, and access all administrative functions.
 
-1. **What is the 4Form Admin Dashboard?**
+## Dashboard Overview
 
-   It’s the main screen you see after logging in as an admin. From here, you can manage users (called tenants), create forms, check submissions, and see form activity.
+### Key Metrics
+The dashboard provides at-a-glance insights into your platform's performance:
 
-2. **What are the first things I can do here?**
+- **My Tenants**: Total number of users and their activity status
+- **My Forms**: Count of all created forms across the platform
+- **Total Submissions**: Aggregate number of form responses received
+- **Tenant Logins**: Recent user login activity and engagement
 
-   - ✅ Create a new user (tenant)
-   - 📝 Create a form
-   - 📊 Track form submissions and logins
+### Quick Actions
+Access the most common administrative tasks directly from the dashboard:
 
-3. **How do I add a new user (tenant)?**
+- **Create Tenant User**: Add new users to the platform
+- **Create Form**: Build new forms for data collection
+- **Manage All Tenants**: Access comprehensive user management
+- **View All Forms**: Browse and manage all platform forms
+- **View All Responses**: Review recent form submissions
 
-   Click on the "Create Tenant User" button in the top right corner. Fill in the user details and save.
+## Form Activity Analytics
 
-4. **How do I create a form?**
+### Activity Graph
+The Form Activity graph provides visual insights into platform usage over time:
 
-   Click on the "Create Form" button next to the tenant button. Give your form a name, add fields, and assign it to a tenant.
+**Metrics Tracked:**
+- **Form Submissions**: Number of responses received
+- **Form Creation**: New forms built by users
+- **User Logins**: Platform access and engagement
 
-5. **What does “My Tenants” mean?**
+**Time Periods:**
+- **1 Month**: Recent activity trends
+- **6 Months**: Medium-term performance analysis
+- **1 Year**: Long-term growth and usage patterns
 
-   It shows how many users (tenants) you have and how many are active.
+### Performance Insights
+Use the analytics to:
+- Identify peak usage periods
+- Monitor form performance trends
+- Track user engagement levels
+- Plan capacity and resource allocation
 
-6. **What does “My Forms” show?**
+## User Management
 
-   It tells you how many forms have been created in total.
+### Tenant Overview
+Tenants are the users who create and manage forms on your platform:
 
-7. **What does “Total Submissions” show?**
+**User Types:**
+- **Active Tenants**: Currently using the platform
+- **Inactive Tenants**: Temporarily disabled accounts
+- **New Tenants**: Recently created accounts pending activation
 
-   This shows how many people have filled out forms.
+### Creating Tenant Users
 
-8. **What is “Tenant Logins”?**
+**Step-by-Step Process:**
+1. Click **"Create Tenant User"** in the top-right corner
+2. Fill in required user information:
+   - Full name and contact details
+   - Email address for login
+   - Initial password or invitation settings
+3. Set user permissions and access levels
+4. Assign initial forms or leave for later assignment
+5. Save to create the account
 
-   This shows how many times your users (tenants) have logged in recently.
+**User Activation:**
+- **Active User Checkbox**: Determines if user can immediately log in
+- **Email Invitations**: Automatic welcome emails with login instructions
+- **Password Setup**: Users receive secure password setup links
 
-9. **What is the Form Activity graph?**
+### Tenant Management Features
 
-   This graph shows:
-   - 📈 How many forms were submitted
-   - 🛠️ How many forms were created
-   - 🔐 How many logins happened
+**Search and Filter:**
+- **Search Bar**: Find users by name, email, or username
+- **Status Filter**: View active, inactive, or all users
+- **Bulk Operations**: Manage multiple users simultaneously
 
-   You can view this activity by selecting: 1 Month, 6 Months, or 1 Year
+**User Actions:**
+- **Edit Profile**: Update user information and settings
+- **Manage Permissions**: Control access to forms and features
+- **Deactivate/Activate**: Temporarily disable or enable accounts
+- **Delete User**: Permanently remove users and their data
 
-10. **How can I view all tenants?**
+## Form Management
 
-    Go to the “My Tenants” box and click “Manage All Tenants” to see or edit all your users.
+### Form Overview
+Monitor all forms created across the platform:
 
-11. **Where can I find my forms?**
+**Form Metrics:**
+- **Total Forms**: Count of all created forms
+- **Active Forms**: Currently accepting submissions
+- **Draft Forms**: Forms in development
+- **Archived Forms**: Completed or inactive forms
 
-    Scroll down to “My Forms” and click “View All Forms” to see the list.
+### Form Administration
+Access comprehensive form management tools:
 
-12. **How can I check recent form submissions?**
+**Global Form Actions:**
+- **View All Forms**: Browse complete form inventory
+- **Form Analytics**: Performance metrics for each form
+- **Bulk Operations**: Manage multiple forms at once
+- **Template Management**: Create and manage form templates
 
-    In the “Recent Submissions” section, click “View All Responses” to see who filled out which form.
+## Submission Monitoring
 
----
+### Recent Submissions
+Track the latest form responses across all forms:
 
-# Tenant Users
+**Submission Details:**
+- **Form Name**: Which form was submitted
+- **Submission Time**: When the response was received
+- **User Information**: Submitter details (if available)
+- **Status**: Processing status of the submission
 
-1. **What is the purpose of this page?**
+### Response Management
+Access tools for handling form submissions:
 
-   This page helps you create, search, and manage tenant users. Tenants are the users who will fill forms or manage their own forms.
+**Response Actions:**
+- **View Details**: See complete submission information
+- **Export Data**: Download responses in various formats
+- **Assign Tasks**: Route responses to appropriate team members
+- **Archive Responses**: Organize completed submissions
 
-2. **What is a “Tenant User”?**
+## System Administration
 
-   A tenant user is someone (like a client, employee, or team member) who has access to view, fill, or manage forms shared with them.
+### Platform Settings
+Configure global platform settings:
 
-3. **How can I create a new tenant user?**
+**Configuration Options:**
+- **Email Settings**: SMTP configuration for system emails
+- **Security Settings**: Password policies and access controls
+- **Notification Settings**: System alerts and user notifications
+- **Data Retention**: Policies for data storage and deletion
 
-   Click the “+ Create Tenant User” button in the top right (or center if no users exist). You’ll be asked to enter details like name, email, etc., and assign form access.
+### Maintenance Tools
+Keep your platform running smoothly:
 
-4. **Where do I see the list of tenants?**
+**Administrative Tasks:**
+- **Database Maintenance**: Optimize performance and storage
+- **User Cleanup**: Remove inactive or test accounts
+- **Form Archival**: Organize old or completed forms
+- **System Backups**: Ensure data protection and recovery
 
-   Once you add tenant users, they will appear in the Tenant Users list section below the search bar.
+## Best Practices
 
-5. **How do I search for a tenant user?**
+### Daily Operations
+- **Review new submissions** for urgent responses
+- **Monitor user activity** for engagement trends
+- **Check system alerts** for any issues
+- **Update user permissions** as needed
 
-   Use the search bar at the top to find a tenant by typing their:
-   - Username
-   - Email
-   - Name
-   Then click Search.
+### Weekly Tasks
+- **Analyze form performance** using the activity graph
+- **Review and clean up** inactive users or forms
+- **Export important data** for backup purposes
+- **Plan capacity** based on usage trends
 
-6. **What is the “Status” filter for?**
-
-   The Status dropdown lets you filter tenants by:
-   - ✅ Active – Tenants who are currently using the system
-   - 🚫 Inactive – Tenants who are deactivated
-   - 🔄 All Status – Shows both active and inactive users
-
-7. **What does “No tenant users found” mean?**
-
-   It means you haven’t created any tenant users yet. Just click “Create Tenant User” to add your first one.
-
----
-
-## Create Tenant User
-
-1. **What does the “Active User” checkbox mean?**
-
-   If this box is checked ✅, the user will be able to log in and access the forms you assign to them. If unchecked ❌, the user will be created but won’t be able to log in until activated.
-
-2. **How do I assign forms to a tenant?**
-
-   After creating the tenant, go back to the Tenant Management page and assign forms to them. 📧 The tenant will get an email invitation to set their password and view assigned forms.
-
-3. **What happens after I click "Create Tenant User"?**
-
-   The tenant is created in the system, and they’ll receive an email to log in. You can then assign forms to them.
-
-4. **Can I cancel this form?**
-
-   Yes. Click the “Cancel” button next to “Create Tenant User” if you want to stop creating the user.
+### Monthly Reviews
+- **Comprehensive analytics review** for strategic planning
+- **User feedback collection** for platform improvements
+- **Security audit** of user permissions and access
+- **Performance optimization** based on usage patterns
